--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,7 +1,29 @@
-.funky_button {
-    -fx-text-fill: purple;
-    -fx-font-size: 16;
+.enter_button {
+    -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-weight: bold;
+    -fx-background-color: linear-gradient(#61a2b1, #2A5058);
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+}
+
+.enter_button:hover {
+    -fx-background-color: linear-gradient(#2A5058, #61a2b1);
+}
+.title_button {
+    -fx-font-size: 20px;
     -fx-font-family: "Arial Black";
-    -fx-padding: 10;
-    -fx-background-color: lime;
+    -fx-fill: #818181;
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
+
+}
+
+.label_button {
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #333333;
+    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+}
+
+.root {
+    -fx-background-image: url("background.jpg");
 }
