--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -18,9 +18,12 @@
 }
 .start_button {
     -fx-font-size: 20px;
-    -fx-font-family: "Arial Black";
-    -fx-fill: #818181;
+    -fx-text-fill: #ffffff;
+    -fx-background-color:#2d2d2d;
     -fx-effect: innershadow(three-pass-box, rgba(0, 0, 0, 0.7), 6, 0.0, 0, 2);
+    -fx-font-family: proxima-nova;
+    -fx-display: block;
+
 }
 
 .start_button:hover {
