--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -48,6 +48,12 @@
     -fx-font-weight: bold;
 }
 
+.feedback_label {
+    -fx-font-family:georgia, serif;
+    -fx-text-fill: #232323;
+    -fx-font-size: 25px;
+    -fx-font-weight: bold;
+}
 
 .questions_button {
     -fx-font-family: times, Times New Roman, times-roman, georgia, serif;
